fixed image issue on IOS

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -18,14 +18,6 @@
   height: 200px;
 }
 
-.about-background-image {
-  width: 100%;
-  height: 300px;
-  background-attachment: fixed;
-  background-size: cover;
-  background-image: url("/images/bar-two.jpg");
-}
-
 .layer-overlay {
   background-color: rgba(248, 247, 216, 0.7);
   position: absolute;
